# folio

./: AGENTS.md  CLAUDE.md  PRD.md  README.md  TECH_DESIGN.md  TECH_DESIGN_V2.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tasks.md  tasks_v2.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.serena/: project.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/folio/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  secure_store.rs
src-tauri/src/commands/: ask.rs  books.rs  export.rs  highlights.rs  mod.rs  notes.rs  reader.rs  settings.rs  translations.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/epub/: exporter.rs  importer.rs
src-tauri/src/llm/: client.rs  mod.rs  worker.rs
src-tauri/src/platform/: menu.rs  mod.rs  paths.rs  windows.rs
src/components/reader/: AnnotationsDrawer.tsx  AskAiPanel.tsx  DisplaySettingsPopover.tsx  EpubViewer.tsx  NoteEditor.tsx  PageChevrons.tsx  ProgressBar 2.tsx  ProgressBar.tsx  QuoteCoverModal.tsx  ReaderSelect.tsx  ReaderToolbar 2.tsx  ReaderToolbar.tsx  SelectionPopup.tsx  TocDrawer.tsx  TranslationBanner.tsx  TranslationSheet.tsx
src/components/settings/: GeneralTab.tsx  (+1 more)
src/hooks/: useAnchoredPanel.ts  useApiKeyStatus.ts  useAppSettings.ts  useAskAi.ts  useBook.ts  useBooks.ts  useEpubSelection.ts  useHighlights.ts  useLibraryFilter.ts  useNotes.ts  useReadingSettings.ts  useTranslation.ts  useWindowState.ts
src/lib/: epub-bridge 2.ts  epub-bridge.ts  panel-chrome.ts  platform.ts  quote-canvas.ts  tauri-commands.ts  utils.ts
src/store/: libraryStore.ts  readerStore.ts
src/styles/: globals.css  reader-themes.css
src/types/: annotation.ts  book.ts  events.ts  settings.ts  translation.ts
src/windows/: LibraryWindow.tsx  ReaderWindow 2.tsx  ReaderWindow.tsx  SettingsWindow.tsx
