[package]
name = "folio"
version = "0.1.0"
description = "Folio macOS ePub reader"
authors = ["Folio"]
edition = "2021"

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.5.0", features = [] }

[dependencies]
keyring = "~3.3.0"
minidom = "~0.15.2"
quick-xml = { version = "~0.36.0", features = ["serialize"] }
reqwest = { version = "~0.12.0", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "~0.31.0", features = ["bundled"] }
rusqlite_migration = "~1.2.0"
serde = { version = "~1.0.0", features = ["derive"] }
serde_json = "~1.0.0"
sha2 = "~0.10.0"
tauri = { version = "~2.10.0", features = ["protocol-asset"] }
tokio = { version = "~1.40.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
zip = "~2.3.0"
